<resources>
    <string name="app_name">YouTube</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="id">id</string>
    <string name="title">title</string>
    <string name="_0_video_series">0 video series</string>
    <string name="playlist">Playlist</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
</resources>