<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:background="@color/white"
        android:elevation="@dimen/dp4"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/dp28"
                android:layout_height="@dimen/dp28"
                android:layout_gravity="center|left"
                android:background="@drawable/img_back"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:textColor="@color/red"
                android:textSize="@dimen/sp18" />

        </LinearLayout>


        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playlist"
            android:textColor="@color/red"
            android:textSize="@dimen/sp22" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp240"
            android:background="@color/dark_white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp55"
                    android:layout_marginBottom="@dimen/dp26"
                    android:padding="@dimen/dp16">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp26"

                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="@dimen/sp18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/videoCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/white"
                    android:paddingHorizontal="@dimen/dp16"
                    android:text="@string/_0_video_series"
                    android:textSize="@dimen/sp16" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/dp2"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/item_video" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp40"
            android:backgroundTint="@color/red"
            android:baselineAlignBottom="false"
            android:clickable="true"
            android:src="@drawable/ic_play"
            android:tint="@null"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="end|bottom"
            tools:ignore="ContentDescription,RtlHardcoded" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/noConnection"
        layout="@layout/item_check_internet"
        android:visibility="gone" />

    <include
        android:id="@+id/progress"
        layout="@layout/item_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>